Added site section

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Andrey Pavlenko - Oncologist</title>
+    <title>Andrey Pavlenko - Principal Investigator, Oncology</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -22,6 +22,7 @@
           <h1 class="name">Andrey Pavlenko</h1>
           <ul class="nav">
             <li><a href="#home">HOME</a></li>
+            <li><a href="#base">SITE</a></li>
             <li><a href="#experience">EXPERIENCE</a></li>
             <li><a href="#education">EDUCATION</a></li>
             <li><a href="#contact">CONTACT</a></li>
@@ -181,6 +182,7 @@
               <h1 class="footer-name">Andrey Pavlenko</h1>
               <ul class="nav">
                 <li><a href="#home">HOME</a></li>
+                <li><a href="#base">SITE</a></li>
                 <li><a href="#experience">EXPERIENCE</a></li>
                 <li><a href="#education">EDUCATION</a></li>
                 <li><a href="#contact">CONTACT</a></li>
