--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 
             <!-- Footer navigation -->
 
-            <nav class="footer-nav cf">
-              <h1 class="footer-name">Andrey Pavlenko</h1>
+            <nav class="footer-nav">
+              <h2 class="footer-name">Andrey Pavlenko</h2>
               <ul class="nav">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#base">SITE</a></li>
