Added site information

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <div class="container profile cf">
         <div class="col secondary">
-          <img src="images/profile.png" alt="Drawing of Kat Patite" class="profile-image">
+          <img src="images/profile.png" alt="Andrey Pavlenko photo" class="profile-image">
         </div>
         <div class="col primary">
           <p>Head of Oncology Center of combined methods of treatment, oncologist. <br><br> Member of the European Society for Surgical Oncology (ESSO). <br><br>Saint-Petersburg, Russia. </p>
@@ -46,6 +46,14 @@
 
       <div class="main-wrapper" >
         <div class="container">
+            <h2 class="main-title" id='base'> SITE </h2>
+            <div class='base'>
+              <p>Primary nosology of the investigational site is oncology. <br><br>
+              Site is based on Oncology Center of combined methods of treatment which is located in center of Saint-Petersburg. <br><br>
+              Our team consits of the professionals with the broad experience in Clinical Trials with in-depth knowledge of GCP.<br><br>
+              Institution web-site:
+              <a href="http://www.gosmed.ru/" target="_blank">http://www.gosmed.ru/</a></p>
+            </div>
 
           <!-- experience section -->
 
@@ -171,10 +179,15 @@
       <footer class="container foot-wrapper" id="contact">
           <div class="footer">
             <h2 class="main-title">CONTACT</h2>
-            <p>For Clinical Trial Proposals please reach me via details below: </p>
-
+            <p>For Clinical Trial Proposals please reach me or our Study Coordinator Andrey Konovalov via details below: </p>
+            <p>Andrey Pavlenko</p>
             <p>Phone  <b> &nbsp; <a href="callto:+7(921)5824580">+7 (921) 582 45 80</a></b></p> <!-- bold style-->
             <p>Email  <b> &nbsp; <a href="mailto:andrewpavlenko@yandex.ru">andrewpavlenko@yandex.ru</a></b></p> <!-- bold style-->
+            <p>Andrey Konovalov</p>
+            <p>Phone  <b> &nbsp; <a href="callto:+7(981)9129999">+7 (981) 912 99 99</a></b></p> <!-- bold style-->
+            <p>Email  <b> &nbsp; <a href="mailto:konovalovandrey01@gmail.com">konovalovandrey01@gmail.com</a></b></p> <!-- bold style-->
+
+
 
             <!-- Footer navigation -->
 
